--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,6 +25,7 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li><a href="{{ url_for('main.index') }}">Home</a></li>
+                <li><a href="{{ url_for('main.blog') }}">blog</a></li>
 
             </ul>
             <ul class="nav navbar-nav navbar-right">
