--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -7,7 +7,7 @@
     <h1>Blogs</h1>
    <div row>
 
-    <p> <a href="{{url_for('main.add')}}"> Add new blog </p>>
+    <p> <a href="{{url_for('main.add')}}"> Add new blog </a></p>
    </div>
 
     <div class="table-responsive">
@@ -18,7 +18,7 @@
                   <th>Title</th>
                   <th>Body</th>
                   <th>Status</th>
-
+                   <th>Edit</th>
                 </tr>
               </thead>
               <tbody>
@@ -26,8 +26,14 @@
                 <tr>
                   <td>{{entry.title}}</td>
                   <td>{{entry.body}}</td>
-                  <td>{{entry.status}}</td>
+                    {%if entry.status== 0 %}
 
+                        <td>Public</td>
+                    {% else  %}
+                       <td>Draft</td>
+                     {% endif  %}
+
+                    <td> <a href="{{url_for('main.edit' , id=entry.id)}}"> Edit</a> </td>
                 </tr>
                   {% endfor %}
               </tbody>
