--- a/app/templates/edit_entry.html
+++ b/app/templates/edit_entry.html
@@ -7,8 +7,7 @@
     <h1>Edit blog</h1>
 </div>
 
-   <form action="{{ url_for('main.add') }}" class="form form- horizontal" method="post">
-
+   <form action="{{ url_for('main.edit' , id=form.id.data) }}" class="form form- horizontal" method="post">
        {{ form.hidden_tag() }}
        {{ form.id }}
         <row>
@@ -17,7 +16,7 @@
                <label for="titleTextBox">{{ form.title.label() }}</label>
 
 
-                {{ form.title(class="form-control" , maxlength="80" ) }}
+                {{ form.title(class="form-control" , size="40", maxlength="80" ) }}
 
            </div>
              {% if form.title.errors %}
@@ -32,7 +31,7 @@
            <div class="form-group">
                <label for="bodyTextBox">{{ form.body.label() }}</label>
 
-               {{ form.body(class="form-control" , rows="4" ,  cols="40") }}
+               {{ form.body(class="form-control" , rows="3" ,  cols="40") }}
 
 
            </div>
@@ -62,10 +61,9 @@
         </row>
 
 
-
         <div class="form-group">
           <div class="col-sm-offset-3 col-sm-9">
-            <button type="submit" class="btn btn- default">Create</button>
+            <button type="submit" class="btn btn- default">Update</button>
             <a class="btn" href="{{ url_for('main.blog') }}">Cancel</a>
           </div>
         </div>
