--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -26,31 +26,45 @@
             <ul class="nav navbar-nav">
                 <li><a href="{{ url_for('main.index') }}">Home</a></li>
                 <li><a href="{{ url_for('main.blog') }}">blog</a></li>
+                {% if g.user.is_authenticated %}
+                        <li><a href="{{ url_for('main.logout', next=request.path) }}">Log out</a></li>
+               {% else %}
+                <li><a href="{{ url_for('main.login', next=request.path) }}">Log in</a></li>
+            {% endif %}
 
             </ul>
-            <ul class="nav navbar-nav navbar-right">
 
-
-                <li><a href="#">Log In</a></li>
-
-            </ul>
         </div>
     </div>
 </div>
 {% endblock %}
 
+
+
+
 {% block content %}
 <div class="container">
-    {% for message in get_flashed_messages() %}
-    <div class="alert alert-warning">
-        <button type="button" class="close" data-dismiss="alert">&times;</button>
-        {{ message }}
+    <div class="row">
+        <div class="col-md-9">
+            <h1>{% block content_title %}{% endblock %}</h1>
+                {% for category, message in get_flashed_messages(with_categories=true) %}
+                <div class="alert alert-dismissable alert-{{ category }}">
+                    <button type="button" class="close" data-dismiss="alert">&times;</button>
+                    {{ message }}
+                </div>
+               {% endfor %}
+            </div>
+        </div>
     </div>
-    {% endfor %}
 
-    {% block page_content %}{% endblock %}
-</div>
+
+   {% block page_content %}
+    {% endblock %}
 {% endblock %}
+
+
+
+
 
 {% block scripts %}
 {{ super() }}
