--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
 
-{% block title %}Flasky {% endblock %}
+{% block title %}Flasky
+
+
+
+{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
