--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -7,46 +7,71 @@
 {% endblock %}
 
 {% block page_content %}
-<div class="page-header">
-    <h1>Blogs</h1>
-   <div row>
+<div class="container">
 
-    <p> <a href="{{url_for('main.add')}}"> Add new blog </a></p>
-   </div>
-
-    <div class="table-responsive">
-        <table class="table table-striped">
-              <thead>
-                <tr>
-
-                  <th>Title</th>
-                  <th>Body</th>
-                  <th>Status</th>
-                   <th>Edit</th>
-                </tr>
-              </thead>
-              <tbody>
-                {% for entry in  entries %}
-                <tr>
-                  <td>{{entry.title}}</td>
-                  <td>{{entry.body}}</td>
-                    {%if entry.status== 0 %}
-
-                        <td>Public</td>
-                    {% else  %}
-                       <td>Draft</td>
-                     {% endif  %}
-
-                    <td> <a href="{{url_for('main.edit' , id=entry.id)}}"> Edit</a> </td>
-                </tr>
-                  {% endfor %}
-              </tbody>
-            </table>
+    <div class="blog-header">
+        <p class="blog-title">Tammys Blog</p>
+        <p class="lead blog-description">Feel free to enter stuff.</p>
     </div>
 
 
+    <div class="row">
+        <div class="col-md-9 blog-main">
+
+               <p> <a href="{{url_for('main.add')}}"> Add new blog </a></p>
+            </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-9 blog-main">
+             {% for entry in  entries %}
+            <div class="blog-post">
+                <h4 class="blog-post-title">{{entry.title}}</h4>
+                <p class="blog-post-meta">{{ moment(entry.created_timestamp).format('LLL') }}
+
+                    {% if g.user.is_authenticated  and (entry.author == g.user) %}
+
+                    <a href="{{url_for('main.edit' , id=entry.id)}}"> Edit</a>
+
+                    {% endif %}
+                </p>
+
+                <p>{{entry.body | markdown}}</p>
+            </div>
+            {% endfor %}
+        </div>
+        <div class="col-md-3 sidebar-module">
+            <h4>Archives</h4>
+            <ol class="list-unstyled">
+              <li><a href="#">March 2014</a></li>
+              <li><a href="#">February 2014</a></li>
+              <li><a href="#">January 2014</a></li>
+              <li><a href="#">December 2013</a></li>
+              <li><a href="#">November 2013</a></li>
+              <li><a href="#">October 2013</a></li>
+              <li><a href="#">September 2013</a></li>
+              <li><a href="#">August 2013</a></li>
+              <li><a href="#">July 2013</a></li>
+              <li><a href="#">June 2013</a></li>
+              <li><a href="#">May 2013</a></li>
+              <li><a href="#">April 2013</a></li>
+            </ol>
+          </div>
+          <div class="sidebar-module">
+            <h4>Elsewhere</h4>
+            <ol class="list-unstyled">
+              <li><a href="#">GitHub</a></li>
+              <li><a href="#">Twitter</a></li>
+              <li><a href="#">Facebook</a></li>
+            </ol>
+          </div>
+        </div><!-- /.blog-sidebar -->
+
+    </div>
 
 
 </div>
+
 {% endblock %}
+
 
