--- a/app/templates/create_entry.html
+++ b/app/templates/create_entry.html
@@ -1,75 +1,46 @@
 {% extends "base.html" %}
-
+{% from "macros/form_field.html" import form_field %}
 {% block title %}Flasky {% endblock %}
 
 {% block page_content %}
 <div class="page-header">
-    <h1>Edit blog</h1>
+    <h1>Add blog</h1>
 </div>
+<div class="container">
 
-   <form action="{{ url_for('main.add') }}" class="form form- horizontal" method="post">
-
-       {{ form.hidden_tag() }}
-       {{ form.id }}
-        <row>
-           <div class="form-group">
-
-               <label for="titleTextBox">{{ form.title.label() }}</label>
+    <div class="row">
 
 
-                {{ form.title(class="form-control" , maxlength="80" ) }}
-
-           </div>
-             {% if form.title.errors %}
-                <ul class="errors">{% for error in form.title.errors %}
-                    <li>{{ error }}</li>{% endfor %}
-                </ul>
-             {% endif %}
-
-        </row>
-
-        <row>
-           <div class="form-group">
-               <label for="bodyTextBox">{{ form.body.label() }}</label>
-
-               {{ form.body(class="form-control" , rows="4" ,  cols="40") }}
+        <div class="col-md-9">
 
 
-           </div>
-             {% if form.body.errors %}
-                <ul class="errors">{% for error in form.body.errors %}
-                    <li>{{ error }}</li>{% endfor %}
-                </ul>
-             {% endif %}
+            <form action="{{ url_for('main.add') }}" class="form form- horizontal" method="post">
 
-        </row>
+            {{ form.hidden_tag() }}
+            {{ form.id }}
+            {{ form_field(form.title) }}
 
-       <row>
-           <div class="form-group">
+            {{ form_field(form.body,  class='form-control', rows=20 ) }}
 
-               <label for="statusTextBox">{{ form.status.label() }}</label>
-               {
-               {{ form.status(class='form-control') }}
-
-
-           </div>
-             {% if form.status.errors %}
-                <ul class="errors">{% for error in form.status.errors %}
-                    <li>{{ error }}</li>{% endfor %}
-                </ul>
-             {% endif %}
-
-        </row>
+            {{ form_field(form.status) }}
 
 
 
-        <div class="form-group">
-          <div class="col-sm-offset-3 col-sm-9">
-            <button type="submit" class="btn btn- default">Create</button>
-            <a class="btn" href="{{ url_for('main.blog') }}">Cancel</a>
-          </div>
+            <div class="form-group">
+                <div class="col-sm-offset-3 col-sm-9">
+                    <button type="submit" class="btn btn- default">Create</button>
+                    <a class="btn" href="{{ url_for('main.blog') }}">Cancel</a>
+                </div>
+            </div>
+        </form>
+
         </div>
-  </form>
+
+
+        </div>
+
+
+</div>
 
 
 
