--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,8 +3,17 @@
 {% block title %}Flasky {% endblock %}
 
 {% block page_content %}
-<div class="page-header">
-    <h1>Flasky</h1>
+<div container>
+
+
 </div>
+
+
+
+<div class="page-header">
+    <h2>Well come to Tammy's Diner</h2>
+</div>
+
+
 {% endblock %}
 
