--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -3,23 +3,34 @@
 {% block title %}Log in{% endblock %}
 {% block content_title %}Log in{% endblock %}
 {% block page_content %}
-<form action="{{ url_for('main.login', next=request.args.get('next','')) }}" class="form form-horizontal" method="post">
-     {{ form.hidden_tag() }}
-       {{ form.id }}
-{{ form_field(form.email) }}
-{{ form_field(form.password) }}
-<div class="form-group">
-    <div class="col-sm-offset-3 col-sm-9">
-        <div class="checkbox">
-            <label>{{ form.remember_me() }} Remember me</label>
+<div class="container">
+    <div class="row">
+
+        <div class="col-md-3">
+
+            <form action="{{ url_for('main.login', next=request.args.get('next','')) }}" class="form form-horizontal"
+                  method="post">
+                {{ form.hidden_tag() }}
+                {{ form.id }}
+                {{ form_field(form.email) }}
+                {{ form_field(form.password) }}
+                <div class="form-group">
+                    <div class="col-sm-offset-3 col-sm-9">
+                        <div class="checkbox">
+                            <label>{{ form.remember_me() }} Remember me</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-sm-offset-3 col-sm-9">
+                        <button type="submit" class="btn btn-default">Log in</button>
+                        <a class="btn" href="{{ url_for('main.index') }}">Cancel</a>
+                    </div>
+                </div>
+            </form>
         </div>
+
     </div>
+
 </div>
-<div class="form-group">
-    <div class="col-sm-offset-3 col-sm-9">
-        <button type="submit" class="btn btn-default">Log in</button>
-        <a class="btn" href="{{ url_for('main.index') }}">Cancel</a>
-    </div>
-</div>
-</form>
 {% endblock %}
